[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.37"
url = "2.3.1"
reqwest = { version = "0.11.12", features = ["json"], optional = true}
strum = "0.24.1"
strum_macros = "0.24.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.5.0"

[features]
async = [
    "reqwest"
]
